--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
     "require": {
         "slim/slim": "2.*",
-        "illuminate/database": "*",
-        "league/oauth2-server": "3.2.*@dev"
+       "league/oauth2-server": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.2.*",
+        "mustangostang/spyc": "0.5.*@dev"
     },
     "autoload": {
         "psr-4": {"" : [ "src/"] }
