--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,9 @@ server {
     try_files $uri $uri/ /index.php?$args;
 
     # this will only pass index.php to the fastcgi process which is generally safer but
-    # assumes the whole site is run via Slim.long
+    # assumes the whole site is run via Slim.
+    location /index.php {
+        fastcgi_connect_timeout 3s;     # default of 60s is just too long
         fastcgi_read_timeout 10s;       # default of 60s is just too long
         include fastcgi_params;
 
@@ -14,6 +16,5 @@ server {
     }
 
     error_log /var/log/nginx/api.bandaid_error.log;
-    access_log /var/log/nginx/api.bandaid_access.log;
     access_log /var/log/nginx/api.bandaid_access.log;
 }
