--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
         "slim/slim": "2.*",
-       "league/oauth2-server": "*"
+        "firebase/php-jwt": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*",
