remove cors headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,17 +4,64 @@ server {
     root         /home/zach/dev/slim-bandaid;
 
     try_files $uri $uri/ /index.php?$args;
-
-    # this will only pass index.php to the fastcgi process which is generally safer but
-    # assumes the whole site is run via Slim.
+  
     location /index.php {
         fastcgi_connect_timeout 3s;     # default of 60s is just too long
         fastcgi_read_timeout 10s;       # default of 60s is just too long
         include fastcgi_params;
-
         fastcgi_pass 127.0.0.1:9000;    # assumes you are running php-fpm locally on port 9000
-    }
+	
+	 if ($request_method = 'OPTIONS') {
 
+            add_header 'Access-Control-Allow-Origin' $http_origin;
+
+            #
+            # Om nom nom cookies
+            #
+
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+
+            #
+            # Custom headers and headers various browsers *should* be OK with but aren't
+            #
+
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+
+            #
+            # Tell client that this pre-flight info is valid for 20 days
+            #
+
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+
+            return 204;
+         }
+
+         if ($request_method = 'POST') {
+
+            add_header 'Access-Control-Allow-Origin' $http_origin;
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+
+         }
+
+         if ($request_method = 'GET') {
+
+            add_header 'Access-Control-Allow-Origin' $http_origin;
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+
+         }
+    }
+    
+    
     error_log /var/log/nginx/api.bandaid_error.log;
     access_log /var/log/nginx/api.bandaid_access.log;
 }
+
+
+  
