--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "slim/slim": "2.*",
-        "firebase/php-jwt": "dev-master"
+        "firebase/php-jwt": "dev-master",
+        "flynsarmy/slim-monolog": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*",
