--- a/nginx.conf
+++ b/nginx.conf
@@ -11,51 +11,52 @@ server {
         include fastcgi_params;
         fastcgi_pass 127.0.0.1:9000;    # assumes you are running php-fpm locally on port 9000
 	
-	 if ($request_method = 'OPTIONS') {
+            if ($http_origin ~* (http?://[^/]*\.localhost(:[0-9]+)?)) {
+                set $cors "true";
+            }
+	    set $cors "true";
 
-            add_header 'Access-Control-Allow-Origin' $http_origin;
+	    if ($request_method = 'OPTIONS') {
+                set $cors "${cors}options";
+            }
 
-            #
-            # Om nom nom cookies
-            #
+            # non-OPTIONS indicates a normal CORS request
+            if ($request_method = 'GET') {
+                set $cors "${cors}get";
+            }
+            if ($request_method = 'POST') {
+                set $cors "${cors}post";
+            }
 
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            # if it's a GET or POST, set the standard CORS responses header
+            if ($cors = "trueget") {
 
-            #
-            # Custom headers and headers various browsers *should* be OK with but aren't
-            #
+                add_header 'Access-Control-Allow-Origin' "$http_origin";
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+		add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
 
-            add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            }
 
-            #
-            # Tell client that this pre-flight info is valid for 20 days
-            #
+            if ($cors = "truepost") {
+                add_header 'Access-Control-Allow-Origin' "$http_origin";
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+		add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            }
 
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
+            # if it's OPTIONS, then it's a CORS preflight request so respond immediately with no response body
+            if ($cors = "trueoptions") {
+                add_header 'Access-Control-Allow-Origin' "$http_origin";
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,If-Modified-Since';
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                return 204;
+            }
 
-            return 204;
-         }
-
-         if ($request_method = 'POST') {
-
-            add_header 'Access-Control-Allow-Origin' $http_origin;
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-
-         }
-
-         if ($request_method = 'GET') {
-
-            add_header 'Access-Control-Allow-Origin' $http_origin;
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-
-         }
     }
     
     
