--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "slim/slim": "2.*",
         "firebase/php-jwt": "dev-master",
-        "flynsarmy/slim-monolog": "dev-master"
+        "flynsarmy/slim-monolog": "dev-master",
+        "willdurand/geocoder": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*",
